	* src/libtracker-db/tracker-db-manager.h
	* tests/libtracker-db/tracker-db-manager-test-attach.c
	* tests/libtracker-db/union-performance.c
	* tests/libtracker-db/tracker-db-manager-test-unattach.c
	* tests/libtracker-db/tracker-db-manager-test-custom.c

	Removing the dir in the temp dir must always happen at startup, never
	at shutdown

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-module.h: Remove get_directories() and
	get_ignore_directories() from modules API. The data specified in the
	.module file will be used.
	* src/tracker-indexer/tracker-indexer-module.[ch]: Remove internal
	API for these as well.
	* src/tracker-indexer/applications.c:
	* src/tracker-indexer/dummy.c:
	* src/tracker-indexer/evolution.c:
	* src/tracker-indexer/files.c:
	* src/tracker-indexer/gaim-conversations.c: Remove the corresponding
	functions in modules.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Remove at the moment the code
	to ignore directories. I must be replaced with TrackerModuleConfig and
	would be used only if --process-all is specified.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* data/modules/evolution.module: Add local and IMAP storage
	directories.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-module.h: Add tracker_module_init() and
	tracker_module_shutdown() to modules API. This is needed since we now
	don't have an entry point that will be called just once, as happened
	with tracker_module_get_directories().
	* src/tracker-indexer/tracker-indexer-module.[ch]: Updated.
	* src/tracker-indexer/tracker-indexer.c (close_module)
	(tracker_indexer_init): Ensure the initialization/shutdown methods are
	called for the modules.
	* src/tracker-indexer/modules/evolution.c: Use these functions to
	manage persistent data.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-module-config.c
	(module_config_load_file):